# SPW

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  vcpkg.json
src/: WSPW.cpp  WSPW.h  WSSTT.cpp  WSSTT.h  WSetting.cpp  WSetting.h  main.cpp
